# OpenGLGameEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/: 说明.md
engine/: CMakeLists.txt
engine/Camera/: CMakeLists.txt  摄像机模块说明.md
engine/Camera/include/Camera/: Camera.h
engine/Camera/include/CameraController/: CameraController.h  FirstPersonCameraController.h
engine/Camera/src/: Camera.cpp
engine/Camera/src/CameraController/: CameraController.cpp  FirstPersonCameraController.cpp
engine/Character/: CMakeLists.txt
engine/Character/include/Character/: Character.h
engine/Character/src/: Character.cpp
engine/Controller/: CMakeLists.txt  说明.md
engine/Controller/include/Controller/: CameraController.h  CharacterController.h  FirstPersonCameraController.h
engine/Controller/src/: CameraController.cpp  CharacterController.cpp  FirstPersonCameraController.cpp
engine/Core/: CMakeLists.txt  核心工具模块说明.md
engine/EngineAPI/: CMakeLists.txt
engine/GameObject/: CMakeLists.txt
engine/Graphics/: CMakeLists.txt  图形模块说明.md
engine/Graphics/include/Graphics/: Mesh.h  Shader.h
engine/Graphics/src/: Mesh.cpp  Shader.cpp
engine/Input/: CMakeLists.txt  输入模块说明.md
engine/Input/include/: InputManager.h  InputMetaManager.h  InputMetaState.h  InputState.h  InputStateInfo.h  InputStateManager.h  InputType.h  KeyCodes.h  KeySolids.h  Keys.h  MouseCodes.h
engine/Input/include/Mapping/: InputActionMap.h  InputAxisMap.h  InputBinding.h  InputMetaActionMap.h  InputMetaAxisMap.h  InputMetaBinding.h
engine/Input/src/: InputMetaManager.cpp  InputStateManager.cpp
engine/Input/src/Mapping/: InputActionMap.cpp  InputAxisMap.cpp
engine/Physics/: CMakeLists.txt
engine/Renderer/: CMakeLists.txt  渲染模块说明.md
engine/Scene/: CMakeLists.txt  场景说明.md
engine/WindowGL/: CMakeLists.txt
engine/WindowGL/include/WindowGL/: Window.h
engine/WindowGL/src/: Window.cpp
runtime/: CMakeLists.txt  main.cpp
tests/: 说明.md
